half done backend

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,4 @@
+  {
     "env": {
         "es2021": true,
         "node": true
@@ -38,4 +39,5 @@
             }
         ]
     },
+    "allow": ["_id"],
 }
