--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   }
