--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@typescript-eslint/parser": "^5.59.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "mongoose": "^6.5.0"
   }
 }
