--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.7.17",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -29,6 +30,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "validator": "^13.9.0"
   }
 }
