--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "< Укажите здесь автора работы >",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.6.3",
     "@types/validator": "^13.7.17",
     "eslint": "^8.21.0",
@@ -26,10 +29,13 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.0",
     "validator": "^13.9.0"
   }
